fixed alignment of radio button and label of checkbox (#3390)
fixed placement of checkbox and its label to be consistent with uniform

ref: SAK-59

--- a/src/styles/unibase/forms/__forms.sass
+++ b/src/styles/unibase/forms/__forms.sass
@@ -31,7 +31,7 @@ uni-field
     width: 100%
     display: block
     padding: 0 .5rem pxToRem(10)
-    min-height: 2.2rem
+    min-height: 3rem
     max-width: pxToRem(650)
 
     label > span
