--- a/src/styles/unibase/forms/_checkboxes.sass
+++ b/src/styles/unibase/forms/_checkboxes.sass
@@ -30,6 +30,7 @@ input[type=radio]
         display: block
         width: 17rem
         padding-right: 2.5rem
+        padding-top: .2rem
         overflow: hidden
         text-overflow: ellipsis
 
@@ -43,7 +44,7 @@ input[type=radio]
             margin-left: .3rem
             box-sizing: border-box
             position: absolute
-            top: .3rem
+            top: .5rem
             left: calc(#{$labelLength} - .3rem)
             border-radius: .2rem
             background: #fff
@@ -63,7 +64,7 @@ input[type=radio]
             border-right: .2rem solid transparent
             border-bottom: .2rem solid transparent
             position: absolute
-            top: .32rem
+            top: .52rem
             left: calc(#{$labelLength} + .3rem)
             height: .5rem
             width: .2rem
@@ -128,7 +129,7 @@ input[type=radio]
             color: $uni-color-positive
             line-height: 1.2rem
             font-size: .9rem
-            padding: 0 .3rem
+            padding: 0 .5rem
             top: 0
 
         &:after
